kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-prod
  labels:
    app.kubernetes.io/name: devops-webapp
