kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-webapp
  namespace: devops-prod
  labels:
    app: devops-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-webapp
  template:
    metadata:
      labels:
        app: devops-webapp
    spec:
      containers:
        - name: devops-webapp
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
