kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-webapp-service
  namespace: devops-prod
  labels:
    app: devops-webapp
spec:
  selector:
    app: devops-webapp
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
