kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-webapp-ingress
  namespace: devops-prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: devops-web.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-webapp-service
                port:
                  number: 80
